fix: Remove tnum variation of zero - to avoid readability issue

--- a/frappe/public/scss/desk/frappe_datatable.scss
+++ b/frappe/public/scss/desk/frappe_datatable.scss
@@ -115,7 +115,7 @@
 
 	// Enable tnum for report
 	.dt-scrollable .dt-cell__content {
-		font-feature-settings: "tnum", "zero";
+		font-feature-settings: "tnum";
 	}
 
 	.dt-scrollable--highlight-all {
